--- a/styling.css
+++ b/styling.css
@@ -28,7 +28,7 @@ p{
     position: absolute;
     top:1;
     left: 0;
-    content: "He was also a pee pee head! and this was added in the feature branch";
+    content: "Baby don't hurt me! and this was added in the feature branch";
 }
 #demo {
     color: transparent;
